Bug 1405567 - Mark LCOV branches not taken with 0, and not executed with -. r=nbp